2010-04-13  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/gen.sh: Adding diamond and random topology.
	* generator/Module.cpp: Likewise.
	* generator/makefile: Likewise.

	* include/dlvhex/MLPSolver.hpp: Use registry for solve() rather than ctx.

	* include/dlvhex/Logger.hpp: Printing additional statistical information.
	* include/dlvhex/MLPSolver.hpp: Likewise.
	* generator/gen.sh: Likewise.

2010-04-12  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/gen.sh: Implement a more general script to generate examples.

	* generator/Module.cpp: Generate example for line, star, and ring topology.
	* generator/makefile: Likewise.

2010-04-11  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Optimization on ASPSolver object and printing information.
	* src/dlvhex/dlvhex.cpp: Likewise.
	* src/dlvhex/State.cpp: Likewise.

	* examples/module-Complex.mlp: Adding an example for a more complex module call.

2010-04-06  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/ModuleStar.cpp: Generate examples of star topology.
	* generator/makefile: Likewise.
	* generator/gen.sh: Likewise.

	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Adapting terms and preds to mlp or not mlp.

	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Put atom with second order variable in onatoms.

	* include/dlvhex/MLPSolver.hpp: Refactoring stack, store only once for each answer set result.
	* testsuite/TestMLPSolver.cpp: Likewise.
	* examples/tests/module-EvenOddTwoMain.out: Likewise.
	* examples/tests/module-EvenOdd.out: Likewise.

	* src/dlvhex/dlvhex.cpp: Modify --n to --num

2010-04-04  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Extend run-dlvhex-tests to work on mlp test suite.
	* testsuite/TestMLPSolver.cpp: Likewise.
	* examples/module-EvenOddTwoCalls1.mlp: Likewise.
	* examples/module-EvenOddTwoCalls2.mlp: Likewise.
	* examples/module-EvenOdd.mlp: Likewise.